src/_webapp/ressources/css/karaokemugen.css
/* ... */
.list-group-item > .actionDiv > button {
	z-index: 52;
	position: relative;
}
.btn-action, .actionDiv > button {
	font-family: 'Glyphicons Halflings';
}
button[name="addKara"]:before {
	content:"\2b";
}
button[name="deleteKara"]:before, button.deleteCriteria:before {
	content:"\2212";
}
button[name="transferKara"]:before {
	content:"\2b";
}

button[name="infoKara"]:before {
	content:"\e086";
}

#panel2 .actionDiv > button[name="transferKara"]:before {
	content:"\e091";
}
#panel1 .actionDiv > button[name="transferKara"]:before {
	content:"\e092";
}
.closeParent:before, .closePopupParent:before, .closeModal:before {
	content:"\e014";
}
.fullLyrics:before {
	content:"\e055";
}
.showVideo:before {
	content:"\e009";
}
.makeFav:before {
	content:"\e007";
}

.makeFav.currentFav:before {
	content:"\e006";
    color: firebrick;
}

.likeKara:before {
	content:"\e143";
}

.likeKara.currentLike:before {
	content:"\e005";
    color: firebrick;
}

.playKara:before {
	content:"\e072";
}

.list-group-item.dragged .dragHandle {
	margin-left: 0px;
	margin-top:3px;
	float: right;
	padding: 0px;
}
.list-group-item .dragHandle {
	height: 100%;
	margin-left: 6px;
    font-size: 2rem;
	cursor: -webkit-grab;
	float: right;
}


.btn-action {
    border: solid 1px hsla(0, 0%, 51%, 1);
	background-color: #393939;
	color: white;
	display: inline-block;
}
.btn-action.btn-sm {
	__width: calc(30px + 19px - 1vw);
	__height: calc(30px + 19px - 1vw);
}
.btn-action.deleteCriteria {
    border: solid 1px hsla(0, 0%, 51%, 1);
	background-color: #393939;
	width: auto;
	height: auto;
	color: white;
	display: inline-block;
}

.btn-action:hover, .btn-action:focus {
	background-color: #292929;
	color: white;
}

.btn-action:active:focus{
	background-color: #444;
	color: white;
}

.playKara {
	__border-color: transparent;
}

.playKara:hover {
	background-color: #286090;
}

.karaCard > div {
	display: none;
}

.list-group-item > div.detailsKara, .list-group-item.karaCard div.details, .lyricsKara {
	min-height: 56px;
	padding: 10px;
	margin: 0;
	color: #cee1ea;
	background-color: hsla(201, 13%, 22%, 0.9);
	border-color: transparent;
	border-radius: 0px;
	position: relative;
}

.detailsKara tr > td:first-child, .karaCard .details tr > td:first-child {
	font-weight: bold;
	padding-right: 7px;
}

.detailsKara .time, .karaCard .details .time {
	color: #DDC5EA;
}
.list-group-item.karaCard div.details {
	background-color: hsla(166, 22%, 18%, 1)
}
.list-group-item .lyricsKara {
	background-color: #303340;
	text-align: center;
	text-transform: none;
 }

.closeModal {
    border: none;
	background-color: transparent;
	color: hsla(0, 0%, 86%, 0.87);
	position: absolute;
    right: 1px;
	top: 4px;
	height: 38px;
	margin-top: -4px;
	cursor: pointer;
}
.closeModal:hover {
	color: hsla(0, 0%, 90%, 0.98);
	background-color: transparent;
}
.detailsKara .topRightButtons, .karaCard .details .topRightButtons, .lyricsKara button.closeParent {
	position: absolute;
	top: 10px;
	right: 10px;
}
.detailsKara .topRightButtons {
	height: calc(100% - 20px);
    display: flex;
    flex-direction: column;
    flex-wrap: wrap-reverse;
}
.topRightButtons button {
	margin: 3px;
}
.topRightButtons button.mobile {
	margin: 5px;
	height: 42px;
	width: 42px;
}
button.closeParent.bottom  {
	bottom: 10px;
	top: auto;
}
.list-group-item .fullLyrics.mobile, .list-group-item .makeFav.mobile, .list-group-item .showVideo.mobile {
	border-color: transparent;
	background-color: hsla(0, 0%, 32%, 0.87);
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.10), 0 1px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 5px -1px rgba(0, 0, 0, 0.1);
}


.list-group-item > .contentDiv {
	padding: 3px 7px;
	overflow: auto;
	display: flex;
	flex-wrap: wrap;
}
.list-group-item > .contentDiv > *{
	flex-grow: 1;
}

.list-group-item > .typeDiv {
	border-right : solid 1px hsla(0, 0%, 35%, 1);
	float: left;
	padding: 0px 7px;
	display: none;
}

.playlistContainer {
    __position: relative;
    z-index: 1;
	overflow: auto;
	position: static;
	-webkit-overflow-scrolling: touch;
}
.playlistLoading {
	position: absolute;
    bottom: 0;
    width: 100%;
    text-align: center;
    background-color: #3a5774;
	font-weight: 500;
	font-size: 1.6rem;
	z-index: 50;
}

.playlist-main ul button  {
	background-color: rgba(57, 57, 57, .7)
}
#playlist1 {
	__background-color: rgba(45, 45, 47, .5);
}
.playlistContainer[flipped]:after {
    content : "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    background: url(/ressources/img/nanami_g_1280w.jpg) no-repeat;
	background-size: 100%;
	background-position: 0 20%;
    width: 100%;
	height: 100%;
    opacity : 0.2;
	z-index: 0;
	filter: grayscale(70%);
}
.playlistContainer[flipped="true"]:after {
	-moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}
.playlistContainer[noGreyFace]:after {
	filter: grayscale(18%);
    opacity : 0.38;
}

.playlistContainer > ul {
	margin-bottom: 20px; /* SUPER IMPORTANT TO AVOID (edit: not really) A WEIRD ASS CHROME BUG DESCRIBED HERE https://github.com/TryGhost/Ghost/issues/7934 */
	will-change: -moz-transform;
	position: relative;
	z-index: 2;
}

#playlist1.list-group > li.list-group-item  > .actionDiv, #playlist1.list-group > li.list-group-item  > .actionDiv > span,
#playlist2.list-group > li.list-group-item  > .infoDiv {
	float: right;
}

#playlist2.list-group > li.list-group-item  > .actionDiv, #playlist2.list-group > li.list-group-item  > .actionDiv > span,
#playlist1.list-group > li.list-group-item  > .infoDiv {
	float: left;
}

bdg {
	background-color: hsl(213, 20%, 16%);
	padding: 0px 5px;
	margin-left: 2px;
	width: 45px;
	text-align: center;
    font-weight: bold;
    color: #aaa;
    box-shadow: 0 6px 8px 2px rgba(0, 0, 0, 0.02), 0 1px 5px 2px rgba(0, 0, 0, 0.015), 0 2px 3px -1px rgba(0, 0, 0, 0.02);
	float: right;
	z-index: 250;
}
/* ... */

